# overseaRegister

./: .env  .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  token_drive.txt
data/: registered_students.xlsx  students.csv
db/config/: payment_schema.py  settings.py
db/models/: payment.py  student.py  student_record.py
routes/: api_routes.py  auth_routes.py  registered_list.py  student_list.py  student_routes.py
scripts/: generate_admin_passwords.py  generate_token.py
services/: auth_service.py  google_drive.py  google_sheet.py  receipt_generator.py  student_service.py
utils/: formatters.py  restore_from_env.py
web/: app.py
web/templates/: base.html  index.html  login.html  registered.html  report.html  students.html  success.html
