[project]
name = "oversearegister"
version = "0.1.0"
description = ""
authors = [
    {name = "Anthony Sung",email = "sungpinyue@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "flask-sqlalchemy (>=3.1.1,<4.0.0)",
    "python-dotenv (>=1.1.1,<2.0.0)",
    "pandas (>=2.3.1,<3.0.0)",
    "openpyxl (>=3.1.5,<4.0.0)",
    "reportlab (>=4.4.3,<5.0.0)",
    "gspread (>=6.2.1,<7.0.0)",
    "google-auth (>=2.40.3,<3.0.0)",
    "google-api-python-client (>=2.177.0,<3.0.0)"
]

[tool.isort]
profile = "black"
line_length = 100

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
flake8 = "^7.3.0"
autoflake = "^2.3.1"
pre-commit = "^4.2.0"
isort = "^6.0.1"

